# AndroidTest

app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/assets/: fragmentShader.hlsl  vertexShader.hlsl
app/src/main/cpp/: CMakeLists.txt  Cube.cpp  Cube.h  Main.cpp  ShaderProgram.cpp  ShaderProgram.h
app/src/main/java/com/example/testapplication/: MainActivity.java
gradle/wrapper/: gradle-wrapper.properties
